# nara_web_agent

./: .gitignore  nginx.conf  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy.yml  test.yml
app/: config.py  main.py
app/auth/: deps.py  jwt.py  router.py
app/bookmarks/: router.py
app/conversations/: router.py
app/db/: database.py  models.py
app/llm/: client.py
app/pipeline/: file_extract.py  g2b_search.py  orchestrator.py  section_extractor.py
app/projects/: router.py
deploy/: nara-api.service  nara-vllm.service
frontend/: app.js  index.html  style.css
nara_server/: file_extractor.py  g2b_api.py
tests/: test_auth.py  test_conversations.py  test_db.py  test_file_extractor.py  test_g2b_search.py  test_main.py  test_orchestrator.py  test_projects.py  test_section_extractor.py
